FDS-230: updates to video embed iframe to ensure that object fit is applied to keep portions of the video from falling out of the viewport

--- a/src/components/molecules/video--embed/_video--embed.scss
+++ b/src/components/molecules/video--embed/_video--embed.scss
@@ -107,10 +107,16 @@ Markup: video--embed.html.twig
   .plyr__video-wrapper {
     background: $white;
     height: 100vh;
+
     .icon--not-pressed {
       path {
         fill: $black !important;
       }
+    }
+
+    iframe {
+      @include object-fit;
+      max-height: 100vh;
     }
   }
 
